--- a/templates/snmp.conf.erb
+++ b/templates/snmp.conf.erb
@@ -1,6 +1,5 @@
-###
-### File managed by Puppet
-###
+<%= ERB.new(File.read(File.expand_path("_header.erb",File.dirname(file)))).result(binding) -%>
+
 <% @snmp_config.each do |line| -%>
 <%= line %>
 <% end -%>
