--- a/templates/snmpd.conf.erb
+++ b/templates/snmpd.conf.erb
@@ -1,6 +1,4 @@
-###
-### File managed by Puppet
-###
+<%= ERB.new(File.read(File.expand_path("_header.erb",File.dirname(file)))).result(binding) -%>
 
 ################################################################################
 # AGENT BEHAVIOUR
