--- a/templates/snmpd.sysconfig-Debian.erb
+++ b/templates/snmpd.sysconfig-Debian.erb
@@ -1,6 +1,5 @@
-###
-### File managed by Puppet
-###
+<%= ERB.new(File.read(File.expand_path("_header.erb",File.dirname(file)))).result(binding) -%>
+
 # This file controls the activity of snmpd and snmptrapd
 
 # Don't load any MIBs by default.
