--- a/templates/snmpd.conf.erb
+++ b/templates/snmpd.conf.erb
@@ -4,49 +4,36 @@
 # AGENT BEHAVIOUR
 
 <% if (@agentaddress.is_a?(Array)) and (@agentaddress.count > 0) -%>
-agentaddress <%= @agentaddress.join(',') %>
+agentAddress <%= @agentaddress.join(',') %>
 <% end -%>
 
 ################################################################################
 # ACCESS CONTROL
-
-# ------------------------------------------------------------------------------
-# Traditional Access Control
-#rocommunity <%= @ro_community %> <%= @ro_network %>
-<% if @rw_community -%>
-#rwcommunity <%= @rw_community %> <%= @rw_network %>
-<% end -%>
-
-# ------------------------------------------------------------------------------
-# VACM Configuration
-#       sec.name       source        community
-com2sec notConfigUser  default       <%= @ro_community %>
-
-#       groupName      securityModel securityName
-group   notConfigGroup v1            notConfigUser
-group   notConfigGroup v2c           notConfigUser
 
 #       name          incl/excl  subtree             mask(optional)
 <% @views.each do |view| -%>
 view    <%= view %>
 <% end -%>
 
-#       group          context sec.model sec.level prefix read       write notif
-<% @accesses.each do |access| -%>
-access  <%= access %>
+rocommunity <%= @ro_community %> localhost
+rocommunity <%= @ro_community %> <%= @ro_network %>
+rouser authOnlyUser
+iquerySecName internalUser
+rouser internalUser
+<% if @rw_community -%>
+rwcommunity <%= @rw_community %> <%= @rw_network %>
+rwuser authPrivUser priv
 <% end -%>
-
-# ------------------------------------------------------------------------------
-# Typed-View Configuration
+rocommunity <%= @ro_community %> default -V systemonly
 
 ################################################################################
 # SYSTEM INFORMATION
 
 # ------------------------------------------------------------------------------
 # System Group
-syslocation <%= @location %>
-syscontact <%= @contact %>
-sysservices <%= @services %>
+sysLocation <%= @location %>
+sysContact <%= @contact %>
+sysServices <%= @services %>
 
 ################################################################################
 # EXTENDING AGENT FUNCTIONALITY
