Autoconfigure a localhost rocommunity for ipv6.

--- a/templates/snmpd.conf.erb
+++ b/templates/snmpd.conf.erb
@@ -17,6 +17,7 @@ rocommunity  <%= @ro_community %> localhost
 rocommunity  <%= @ro_community %> <%= @ro_network %>
 <% end -%>
 <% if @ro_community6 and (@ro_community6.size > 0) -%>
+rocommunity6 <%= @ro_community6 %> localhost
 rocommunity6 <%= @ro_community6 %> <%= @ro_network6 %>
 <% end -%>
 <% if @rw_community and (@rw_community.size > 0) -%>
